# BuildingAIAgent

./: LICENSE  README.md
Exercise_1/: README.md  homework.py  how_to_llamafile.md  pyproject.toml
Exercise_2/: .gitignore  agent.py  config.py  example_agent.md  pyproject.toml
Exercise_3/: benchmark.py  e2e_test.py  test_and_benchmark.md  test_cases.json
