[project]
name = "exercise-1"
version = "0.1.0"
description = ""
authors = [
    {name = "milochen0418",email = "milo_chen@mail2000.com.tw"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "openai (>=1.107.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
